--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
 [submodule "tic"]
-	path = tic
+	path = ./modules/tic
 	url = https://github.com/pololu/pololu-tic-software
 [submodule "libusbp"]
-	path = libusbp
+	path = ./modules/libusbp
 	url = https://github.com/pololu/libusbp
 	branch = v1-latest
 [submodule "matplotlib-cpp"]
-	path = matplotlib-cpp
+	path = ./modules/matplotlib-cpp
 	url = https://github.com/lava/matplotlib-cpp
