--- a/workspace/src/antenna_control/CMakeLists.txt
+++ b/workspace/src/antenna_control/CMakeLists.txt
@@ -18,83 +18,6 @@ find_package(catkin REQUIRED COMPONENTS
 # find_package(Boost REQUIRED COMPONENTS system)
 find_package(Eigen3 REQUIRED)
 
-
-## Uncomment this if the package has a setup.py. This macro ensures
-## modules and global scripts declared therein get installed
-## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
-
-################################################
-## Declare ROS messages, services and actions ##
-################################################
-
-## To declare and build messages, services or actions from within this
-## package, follow these steps:
-## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
-## * In the file package.xml:
-##   * add a build_depend tag for "message_generation"
-##   * add a build_depend and a exec_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
-##     but can be declared for certainty nonetheless:
-##     * add a exec_depend tag for "message_runtime"
-## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
-
-## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
-
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
-
-## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
-
-################################################
-## Declare ROS dynamic reconfigure parameters ##
-################################################
-
-## To declare and build dynamic reconfigure parameters within this
-## package, follow these steps:
-## * In the file package.xml:
-##   * add a build_depend and a exec_depend tag for "dynamic_reconfigure"
-## * In this file (CMakeLists.txt):
-##   * add "dynamic_reconfigure" to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * uncomment the "generate_dynamic_reconfigure_options" section below
-##     and list every .cfg file to be processed
-
-## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
-
 ###################################
 ## catkin specific configuration ##
 ###################################
@@ -105,13 +28,12 @@ find_package(Eigen3 REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
- INCLUDE_DIRS 
+ INCLUDE_DIRS
   include
-#  LIBRARIES antenna_control
- CATKIN_DEPENDS 
-  roscpp
-  messages
-#  DEPENDS system_lib
+  /usr/local/include/libpololu-tic-1
+ LIBRARIES
+  pololu-tic-1
+  tic_lib
 )
 
 ###########
@@ -121,10 +43,10 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-include
-/usr/local/include/libpololu-tic-1
-${catkin_INCLUDE_DIRS}
-${EIGEN3_INCLUDE_DIRS}
+  include
+  /usr/local/include/libpololu-tic-1
+  ${catkin_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIRS}
 )
 
 # link_directories(${Eigen3_INCLUDE_DIRS})
@@ -134,7 +56,7 @@ add_library(tic_lib
   src/tic_lib.cpp
 )
 
-add_library(motor_pose_predictor_lib
+add_library(motor_predictor_lib
   src/predictor_lib.cpp
 )
 
@@ -147,9 +69,10 @@ add_library(motor_pose_predictor_lib
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(tic_collect_data src/tic_collect_data.cpp)
-add_executable(tic_current_pose src/pose_node.cpp)
-add_executable(motor_control_node src/motor_control.cpp)
+add_executable(tic_collect_data src/tic_collect_data_node.cpp)
+add_executable(motor_pose src/motor_pose_node.cpp)
+add_executable(motor_control src/motor_control_node.cpp)
+add_executable(motor_control_no_pred src/motor_control_no_pred_node.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -162,61 +85,32 @@ add_executable(motor_control_node src/motor_control.cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(tic_collect_data
-  ${catkin_LIBRARIES} tic_lib pololu-tic-1
+  ${catkin_LIBRARIES} 
+  pololu-tic-1
+  tic_lib 
 )
 
-target_link_libraries(tic_current_pose
-  ${catkin_LIBRARIES} tic_lib pololu-tic-1
+target_link_libraries(motor_pose
+  ${catkin_LIBRARIES} 
+  pololu-tic-1
+  tic_lib 
 )
 
-target_link_libraries(motor_control_node
-  ${catkin_LIBRARIES} tic_lib pololu-tic-1
-  motor_pose_predictor_lib
+target_link_libraries(motor_control
+  ${catkin_LIBRARIES} 
+  pololu-tic-1
+  tic_lib 
+  motor_predictor_lib
+)
+
+target_link_libraries(motor_control_no_pred
+  ${catkin_LIBRARIES} 
+  pololu-tic-1
+  tic_lib 
+  motor_predictor_lib
 )
 # target_link_libraries(tic_predictor
 #   ${Eigen3_LIBRARIES}
-# )
-
-#############
-## Install ##
-#############
-
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
-
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark executables for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
-# install(TARGETS ${PROJECT_NAME}_node
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark libraries for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
-# install(TARGETS ${PROJECT_NAME}
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-# )
-
-## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
 
 #############
@@ -232,7 +126,7 @@ target_link_libraries(motor_control_node
 add_executable(predictor_lib_test test/predictor_lib_test.cpp)
 
 target_link_libraries(predictor_lib_test
-  motor_pose_predictor_lib
+  motor_predictor_lib
 )
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
