--- a/workspace/src/initialization/package.xml
+++ b/workspace/src/initialization/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>odom_estimate</name>
+  <name>initialization</name>
   <version>0.0.0</version>
-  <description>The odom_estimate package</description>
+  <description>The initialization package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/odom_estimate</url> -->
+  <!-- <url type="website">http://wiki.ros.org/initialization</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -32,9 +32,10 @@
   <!-- Dependencies can be catkin packages or system dependencies -->
   <!-- Examples: -->
   <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
+  <!--   <depend>roscpp</depend> -->
   <!--   Note that this is equivalent to the following: -->
-  <build_depend>roscpp</build_depend>
-  <exec_depend>roscpp</exec_depend>
+  <!--   <build_depend>roscpp</build_depend> -->
+  <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
   <!--   <build_depend>message_generation</build_depend> -->
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
@@ -47,9 +48,11 @@
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
-  <build_depend>messages</build_depend>
-  <exec_depend>messages</exec_depend>
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>roscpp</build_depend>
+  <build_export_depend>roscpp</build_export_depend>
+  <exec_depend>roscpp</exec_depend>
+  <depend>antenna_control</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
