--- a/workspace/src/antenna_control/config/motor_phi.yaml
+++ b/workspace/src/antenna_control/config/motor_phi.yaml
@@ -1,4 +1,6 @@
 m1: 0.015913663565769724
 m2: -0.017212386416242967
 A: 8.888888889 # (4 * 200) * 4 / 360
+degree_at_step0: 0
+max_degrees: 370 # no cap
 handle: 00368583
