--- a/workspace/src/visualize/CMakeLists.txt
+++ b/workspace/src/visualize/CMakeLists.txt
@@ -103,7 +103,7 @@ find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
- INCLUDE_DIRS include
+ INCLUDE_DIRS 
 #  LIBRARIES visualize
  CATKIN_DEPENDS roscpp
 #  DEPENDS system_lib
